[tool.poetry]
name = "fbchat-muqit"
version = "1.0.4"
description = "A powerful Facebook Messenger API to interact with Facebook and Messenger."
authors = ["Muhammad MuQiT <togashiyuuta1111@gmail.com>"]
license = "GPL-V3"  
readme = "README.md"
keywords = ["facebook", "messenger", "chat", "api", "asyncio"]
homepage = "https://github.com/togashigreat/fbchat-muqit"
repository = "https://github.com/togashigreat/fbchat-muqit"
documentation = "https://fbchat-muqit.readthedocs.io" 
packages = [
    { include = "fbchat_muqit" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO"
]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.11.11"
aiomqtt = "^2.3.0"
aenum = "^3.1.15"
yarl = "^1.18.3"


[tool.poetry.group.dev.dependencies]
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"
furo = "^2024.8.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

