
[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "fbchat-muqit"
version = "1.2.1"
description = "A powerful Facebook Messenger API to interact with Facebook and Messenger."
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Muhammad MuQiT", email = "togashiyuuta1111@gmail.com" }]
keywords = ["facebook", "messenger", "chat", "api", "asyncio", "fbchat-muqit", "fbchat", "fca"]
homepage = "https://github.com/togashigreat/fbchat-muqit"
repository = "https://github.com/togashigreat/fbchat-muqit"
documentation = "https://fbchat-muqit.readthedocs.io"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
]

dependencies = [
    "aiohttp>=3.11.11",
    "aiomqtt>=2.3.0",
    "aenum>=3.1.15",
    "yarl>=1.18.3",
    "msgspec>=0.19.0",
    "aiofiles>=25.1.0",
    "filetype>=1.2.0",
    "aiohttp-socks>=0.10.2",
    "brotli>=1.2.0",
    "puremagic>=1.30",
]

[dependency-groups]
dev = [
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
    "furo>=2024.8.6",
]

[tool.hatch.build.targets.wheel]
packages = ["fbchat_muqit"]

